acs-cve-2024-53677/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnerables
  labels:
    app.kubernetes.io/part-of: acs-cve-2024-53677-demo
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
