acs-cve-2024-53677/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocp-struts2
  namespace: vulnerables
  labels:
    app: ocp-struts2
    app.kubernetes.io/part-of: acs-cve-2024-53677-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocp-struts2
  template:
    metadata:
      labels:
        app: ocp-struts2
        app.kubernetes.io/part-of: acs-cve-2024-53677-demo
    spec:
      containers:
        - name: ocp-struts2
          image: quay.io/rh_ee_srickerd/ocp-struts2
          ports:
            - containerPort: 8080
