acs-cve-2024-53677/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-struts2
  namespace: vulnerables
  labels:
    app: ocp-struts2
    app.kubernetes.io/part-of: acs-cve-2024-53677-demo
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  selector:
    app: ocp-struts2
