acs-cve-2024-53677/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-struts2
  namespace: vulnerables
  labels:
    run: ocp-struts2
    app.kubernetes.io/part-of: acs-cve-2024-53677-demo
spec:
  to:
    kind: Service
    name: ocp-struts2
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
